*abduco-0.5 (15 Jan 2016)

  15 Jan 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +abduco-0.5.ebuild, -abduco-0.4.ebuild:
  app-misc/abduco: version bump

*abduco-0.4 (07 Jan 2016)

  07 Jan 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +abduco-0.4.ebuild, +metadata.xml:
  app-misc/abduco: version bump