@@ -1,23 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST abduco-0.5.tar.gz 15790 SHA256 bf22226a4488355a7001a5dabbd1e8e3b7e7645efd1519274b956fcb8bcff086 SHA512 e0772b8eecc1fb6f16c7516a6956825b9bda4149f00f56b34e68ec3544f74c2270ba8cc2642599de26ae34d11ed78b8bba70497bfc9a79f3008f50de02ce49d8 WHIRLPOOL ffce64702323cba434768bb4864b9f8bd0e5a6768f3fd5a821081eee77dcffea33c8ab920e39471fb644ca2ff03214d04808d55804889a278417c5d6d76d3f79
+DIST abduco-0.6.tar.gz 15829 SHA256 c90909e13fa95770b5afc3b59f311b3d3d2fdfae23f9569fa4f96a3e192a35f4 SHA512 3b70a5cc10f0a2743dcbdf6eebdcfcee0e4f4ff8c6ce0bf0aa9f55c3fa85ab43aa659997735e063eab36aba69f91be7bb5519f3f632bff1b9098f5179165c1f2 WHIRLPOOL 116ac3855e25ebb406d5a6d8702eb4115ee98f783113424cad67e2fab95efdb08ea641aac5f72107955ce31759dd10760ebfd14f1b21c583eea47bce7e056a16
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iQJ8BAEBCABmBQJWmQetXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59luAQAIbDv3C1Sxo+y2p7xbYGO96z
-DBkuWTefTDeXfOUDJxfVzFumlyWUaAx5eHPNK5uZmjnOIkKQ+YQ5f5Vi1/Jc7GKl
-YrcExuojf4jj6Wur2faC/vYnIcdZ1pBDHkp16H7Vd+201wBzb/F0C/omCroEBaJk
-3Bmgllp4V9PAadZsvk/sPMrKa0FeBpEVYdznmapB/1WMX6d/nWgw0MO7AAFGHOIJ
-wQYjP37xKwtvvvImvpllgq3AjL6YSKX4sbE6ypB6iqO/VqUMrZDiVMcEL6AyL6Kk
-AWQiNhToSePvQxbr6TLKnkr5T87b8mtbry3krngK/eJHKS5kwUdNvyIdcB18MkDc
-F315SOWNOT2R+AE2ijpNPzcJI0IN/wtKCbZwOpc9Q22+Js3oZs8z9tTFK9oGGN8u
-fpw8PQfYE2c5mbe5HSlk+oroKGpZ3CXEYoSIGbuAmO887bj2+C/jC4MC2U8vqyLY
-Dkb8edS7hVpMfTNNu36dgcJ6xKmOKVGBhABZ6Wt+ZuO9HhKiDMmZivihnP0xFwpE
-cCMsC/T9zativsJbcHOw4RYQszG2az6wUdkjN2F7MvjctpMDhBr4hIUa2MC++abF
-Nl0+EttCtOENPrJgxyL5YaS2PBdCkbKa+uwp1/EJ4v2kp3fGSzrdEU4hVmZ9/gQF
-Mx0CWYCebUj7tR4cnU4L
-=ZF9X
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlhzjItfFIAAAAAALgAo
+aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
+QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
+Hn1mEQ/+N1p8VBR8PLjT6tFjxBXtA5pRlUbRl7DvtFh/xmw/9wsckNk/UhIUpVBW
+/Ol/h0BO3cgLriumeSS2rB8802pSz3WolPELHm0b7wxgZaxfstMPirICfz2n6SP2
+mJmDKOGmvILNNSjCHwiY0lYBnCqIIfyvomb9c2fXvJKztGxoLGw4TwFvumjxqLBL
+jp5MLpg+mul9RBShkHtcfF/AKhuweEQTrys096RmuDZykNJhxGBe7ZONFa+wMTjL
+UYdHcrBeBzPvJONJhX8W1KFZ99KbJO4Pu/UmICbFOGDkptEBfmBw0OygiKcH+4rN
+hn24hfXOLltk3h8y4HcGxQHo6v+3yErVgvqy1FM4+RaAgzpd44e9R2rSP4CUpiMd
+zxj3Z7gP2J7+vE5DXp8DYbiNSZdPQbLjuPTKAKgbjJmlbdi1fxEF5Np738Kt8XP4
+W+TVlYlIfEteVCktQFJu/iFS7D+331YuAmKmlmdzc8NqXaAp6Gc40URPBsNLyOOl
+lOs9QDRipvo/xAWBazXjjT2Q/xIM7nkCr1y4D4d5rCcbzedEuA4LsK7CltNpnDaJ
+Bwt6BfVINaAWIDG8NOaJPRkiPdm085VSEPV/pzxvFkavwGd+sSp6756nMWQPa+BV
+nPgSA5ZKu+ADFMu6Se9cbRpHJUqc5HPpBnep7iowRYK6rf0ipJw=
+=X7tn
 -----END PGP SIGNATURE-----
